[package]
name = "seed-seeker"
version = "1.2.1"
edition = "2024"

homepage = "https://github.com/FDB-Cabinet/ssed-seeker"
repository = "https://github.com/FDB-Cabinet/ssed-seeker"
documentation = "https://docs.rs/seed-seeker/latest/seed-seeker/"
authors = [
    "Akanoa <dev@guern.eu>"
]
description = "Search for FDB faulty seeds and export them as a gitlab issue"
publish = true
keywords = [
    "foundationdb",
    "simulation",
    "gitlab",
]
license = "BSD-3-Clause"
readme = "Readme.md"

[dependencies]
clap = { version = "4.5.41", features = ["derive", "env"] }
derive_builder = "0.20.2"
dotenv = "0.15.0"
flate2 = "1.1.2"
tar = "0.4.44"
jq-rs = { version = "0.4.1", features = [] }
jsonxf = "1.1.1"
rand = "0.9.2"
reqwest = { version = "0.12.22", features = ["multipart", "stream", "blocking"] }
subprocess = "0.2.9"
tempfile = "3.20.0"
walkdir = "2.5.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
rayon = "1.10.0"